* Dialer (ECCP): work around https://bugs.php.net/bug.php?id=41175 which throws
  a warning on an attempt to set a XML attribute to an empty string. Triggered
  by a form with an empty description. 
* Dialer (ECCP): remove bogus copy-paste leftover in form information fetching.
* Dialer: try harder to find client channel the agent is talking to. Apparently
  OnLink may be received before 'agent status' is properly updated.
* Dialer: at hangup, the check for scheduled calls requires access to campaign
  data, but the campaign may already have ended, so it might not be in the
  campaign array. Read campaign data from database if required.
* Dialer (ECCP): fix access to possibly-undefined property 'ActualChannel' when
  looping through calls - ActualChannel is set OnLink, but loop also visits 
  unlinked calls in progress. 
* Dialer: subsys lock file must have the same name as the service in 
  /etc/init.d in order to shutdown properly.
* Dialer (ECCP): fix copy/paste error in "getcampaignqueuewait" request on error
  path.

1.6.3 (SVN revision 3327)
* Agent Console: fix broken POST variable parsing when scheduling a call. Fixes
  Elastix bux #1083. 
* Agent Console: allow scrolling on right panel. Fixes Elastix bug #1082.
* Dialer (ECCP): Do not dial to *8888 anymore for agent login. Instead, dial
  channel directly into the AgentLogin application. This frees the dialer from
  having to know a special dialstring for agent login. Fixes Elastix bug #1076.

1.6.2 (SVN revision 3289)
* Dialer: fix bug in which linked call could get assigned to an inactive version
  of an agent even if an active version exists.
* Dialer (ECCP): implement "getcampaignqueuewait" request for sampling of queue
  wait times before calls are handled by an agent.
* Agent Console: wait up to 1 second after login request in order to catch
  early login failure.
* Form Preview: replace HTML entity in Spanish translation
* Queues: complete rewrite, fixes potential SQL injections, makes use of 